fix project scroll on mobile and showing play buttons

--- a/src/scss/partials/_project-block.scss
+++ b/src/scss/partials/_project-block.scss
@@ -97,6 +97,10 @@
     .slideshow & {
       width:100%;
       float:none;
+      
+      @include at-mobile {
+       pointer-events:none;
+      }
     }
     
     @include at-mobile {
